[package]
name = "linked_list"
version = "0.1.0"
authors = ["justapig9020 <justapig9020@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-test = "0.2.0-alpha.6"
strum = "0.20.0"
strum_macros = "0.20.0"
clap = "2.33.3"
